--- a/Exercicios/003/index.html
+++ b/Exercicios/003/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Testando carga e imagens</h1> 
+   <h1>Testando carregamento de imagens</h1> 
    <p>Abaixo você vai ver uma imagem que está na mesma pasta.</p>
    <img src="Logo HTML-Full.png" alt="Logo HTML5"><!--Aqui usamos as teclas ctrl + espaço para aparecer as opções de inserção das imagens-->
 </body>
