--- a/desafios/10/android.html
+++ b/desafios/10/android.html
@@ -95,19 +95,19 @@
                     Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
                 </p>
 
-                <li>
+                <p>
                     Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
-                </li>
+                </p>
             </aside>
             
 
-            <li>
+            <p>
                 Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.
-            </li>
+            </p>
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/Rafaelrfo88" target="_blank">Rafael Felix</a> através do CursoemVídeo</p>
+        <p>Site criado por <a href="https://github.com/Rafaelrfo88" target="_blank">Rafael Felix</a> através do <a href="https://youtube.com/cursoemvideo" target="_blank">CursoemVídeo</a></p>
     </footer>
 </body>
 </html>
