--- a/desafios/10/android.html
+++ b/desafios/10/android.html
@@ -113,7 +113,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/Rafaelrfo88" target="_blank">Rafael Felix</a> através do <a href="https://youtube.com/cursoemvideo" target="_blank">CursoemVídeo</a></p>
+        <p>Site desenvoldido por <a href="https://github.com/Rafaelrfo88" target="_blank">Rafael Felix</a> através do <a href="https://youtube.com/cursoemvideo" target="_blank">CursoemVídeo</a></p>
     </footer>
 </body>
 </html>
