--- a/Exercicios/022/fundo006.html
+++ b/Exercicios/022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
@@ -13,13 +13,17 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; /*a imagem de fundo irá ficar fixa  */
+            /*shorthand - background
+            color >image > position > repeat> > (size) > attachment
+            */
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
-            margin: auto;
+            margin: auto; /*posição do texto, nesse caso está no centro*/
             border: 1px solid blue;
             border-radius: 15px;
         }
@@ -28,6 +32,19 @@
 <body>
     <main>
         <h1>Teste de imagem de Fundo</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut voluptas culpa nihil fugit veritatis modi inventore corrupti facere, rem, laboriosam earum beatae dolore, laudantium iure obcaecati quos. Sapiente, nobis assumenda!</p>
     </main>
 </body>
