--- a/Exercicios/022/fundo007.html
+++ b/Exercicios/022/fundo007.html
@@ -25,10 +25,10 @@
             background-color: yellow;
             /*margin: auto;*/ /*margin só serve para alinhamento orizontal |*/
 
-            left: 50%;
+            left: 50%; /*aqui iremos posicionar a caixa no centro da pagina, porém tem o detalhe da posição da ponta da caixa que é corrigida com o codigo abaixo*/
             top: 50%;
 
-            transform: translate(-50%, -50%); /*aqui da pra alterar a posição, */
+            transform: translate(-50%, -50%); /*aqui da pra alterar a posição do centro da caixa alinhada com o centro*/
         }
     </style>
 </head>
