--- a/desafios/12/index.html
+++ b/desafios/12/index.html
@@ -18,7 +18,7 @@
         </p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -30,7 +30,8 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem
+    ">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
