--- a/desafios/12/index.html
+++ b/desafios/12/index.html
@@ -30,8 +30,7 @@
         </p>
     </section>
 
-    <section class="imagem
-    ">
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -44,7 +43,7 @@
     </section>
 
     <section>
-        
+
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
