--- a/desafios/12/index.html
+++ b/desafios/12/index.html
@@ -42,8 +42,7 @@
         </p>
     </section>
 
-    <section>
-
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -63,10 +62,9 @@
             Pra entender como fica <br>
             Decifre esse rabisco.
         </p>
-        
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -78,8 +76,7 @@
         </p> 
     </section>
 
-    <section>
-    
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
