--- a/Exercicios/023/tabela002.html
+++ b/Exercicios/023/tabela002.html
@@ -12,6 +12,13 @@
     </h1>
     <!--
         Anatomia para tabelas grandes
+        TABLE
+            THEAD
+                TR, TD, TH
+            TBODY
+                TR, TD, TH
+            TFOOTER
+                TR, TD, TH
     -->
 </body>
 </html>
