--- a/Exercicios/023/tabela002.html
+++ b/Exercicios/023/tabela002.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tebales</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table {
+            width: 500px;
+        }
+        td, th {
+            border: 1px solid black;
+            padding: 10px;
+        }
+        th
+    </style>
 </head>
 <body>
     <h1>
@@ -20,5 +33,26 @@
             TFOOTER
                 TR, TD, TH
     -->
+    <table>
+        <thead>
+            <tr>
+                <th>Estado</th>
+                <th>População</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>São Paulo</td>
+                <td>45919049</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td>45919049</td>
+            </tr>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+    </table>
 </body>
 </html>
