--- a/Exercicios/023/tabela002.html
+++ b/Exercicios/023/tabela002.html
@@ -16,12 +16,11 @@
             border: 1px solid black;
             padding: 10px;
         }
-        th
     </style>
 </head>
 <body>
     <h1>
-        Uso de Tabelas Grandes
+        Uso de Tabelas Grandes demais
     </h1>
     <!--
         Anatomia para tabelas grandes
