--- a/Exercicios/023/tabela002.html
+++ b/Exercicios/023/tabela002.html
@@ -16,6 +16,9 @@
             border: 1px solid black;
             padding: 10px;
         }
+        thead {
+            background-color: ;
+        }
     </style>
 </head>
 <body>
