--- a/Exercicios/023/tabela002.html
+++ b/Exercicios/023/tabela002.html
@@ -17,6 +17,13 @@
             border: 1px solid black;
             padding: 10px;
         }
+        tfoot,thead {
+            background-color: grey;
+            color: white;
+        }
+        td.num {
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -26,6 +33,7 @@
     <!--
         Anatomia para tabelas grandes
         TABLE
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -34,6 +42,9 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>
+            População das Unidades Federativas
+        </caption>
         <thead>
             <tr>
                 <th>Estado</th>
@@ -43,17 +54,117 @@
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td>45919049</td>
+                <td class="num">45919049</td>
             </tr>
             <tr>
-                <td>São Paulo</td>
-                <td>45919049</td>
+                <td>Minas Gerais</td>
+                <td class="num">21160791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Parana</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Goias</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Espirito Santo</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Paraiba</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Piaui</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">17254543</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">17254543</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
                 <th>Total de Habitantes</th>
-                <td>0000</td>
+                <td class="num"><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
     </table>
