--- a/Exercicios/023/tabela002.html
+++ b/Exercicios/023/tabela002.html
@@ -12,14 +12,31 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
             padding: 10px;
         }
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 5px;
+            background-color: lightgray;
+            border-radius: 30px 30px 0px 0px;
+            border: 1px solid black;
+        }
         tfoot,thead {
             background-color: grey;
             color: white;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+        tbody > tr:nth-child(2n) { /*no lugar do 2n podemos usar odd (impar) */
+            background-color: lightgray;
         }
         td.num {
             text-align: right;
@@ -47,8 +64,8 @@
         </caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width:50px">População</th>
             </tr>
         </thead>
         <tbody>
@@ -163,7 +180,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
