--- a/desafios/14/desafio14.html
+++ b/desafios/14/desafio14.html
@@ -13,6 +13,7 @@
         table {
             border-collapse: collapse;
             width: 600px;
+            border-radius: 10px;
         }
         tr, th, td {
             border: 2px solid black;
