--- a/Exercicios/024/iframe003.html
+++ b/Exercicios/024/iframe003.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Uso de iframe</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        iframe#tela {
+            width: 95vw;
+            border: 2px solid black;
+            height: 400px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Faça uma escolha</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut possimus amet architecto sapiente nemo provident. Quasi impedit consequatur reiciendis iure repellendus? Vero accusantium commodi, quod quae itaque nam. Veniam, at!</p>
+
+    <ul>
+        <li><a href="Páginas Extras/pagina001.html" target="frame">Primeira página</a></li>
+        <li><a href="Páginas Extras/pagina002.html" target="frame">Segunda página</a></li>
+        <li><a href="#">Terceira página</a></li>
+    </ul>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero dolorem eos iusto optio saepe rem cumque cum, quam quos nulla. Sequi necessitatibus ducimus magnam illo doloremque, id sunt deserunt modi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, unde quisquam dolorem placeat voluptatum temporibus iusto nulla ut voluptas veritatis. Qui unde ducimus perferendis at mollitia animi voluptates quam eligendi?</p>
+
+    <iframe id="tela" name="frame"src="">
+        <p>Infelizmente seu navegador não é compatível</p>
+    </iframe>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, expedita nisi voluptas, corporis quo impedit neque vel ex labore cumque assumenda quibusdam soluta earum molestias facere quos beatae, vitae eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aperiam nobis doloremque sint nisi eos, corporis veniam impedit at maxime dignissimos officiis minus repellendus eaque libero, rem modi delectus deleniti.</p>
 </body>
 </html>
