--- a/Exercicios/024/iframe003.html
+++ b/Exercicios/024/iframe003.html
@@ -28,7 +28,8 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero dolorem eos iusto optio saepe rem cumque cum, quam quos nulla. Sequi necessitatibus ducimus magnam illo doloremque, id sunt deserunt modi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, unde quisquam dolorem placeat voluptatum temporibus iusto nulla ut voluptas veritatis. Qui unde ducimus perferendis at mollitia animi voluptates quam eligendi?</p>
 
-    <iframe id="tela" name="frame"src="">
+    <iframe id="tela" name="frame"src="Páginas Extras/pagina001.html"> <!--No espaço do src iremos colocar as página que queremos definir como padrão
+    no lugar do scr podemos usar scrdoc, que podemos digitar códigos html direto, sem apontar para uma página já criada-->
         <p>Infelizmente seu navegador não é compatível</p>
     </iframe>
 
