--- a/Exercicios/024/iframe003.html
+++ b/Exercicios/024/iframe003.html
@@ -30,7 +30,7 @@
 
     <iframe id="tela" name="frame"src="Páginas Extras/pagina001.html"> <!--No espaço do src iremos colocar as página que queremos definir como padrão
     no lugar do scr podemos usar scrdoc, que podemos digitar códigos html direto, sem apontar para uma página já criada-->
-        <p>Infelizmente seu navegador não é compatível</p>
+        <p>Infelizmente seu navegador não é compatível.</p>
     </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, expedita nisi voluptas, corporis quo impedit neque vel ex labore cumque assumenda quibusdam soluta earum molestias facere quos beatae, vitae eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aperiam nobis doloremque sint nisi eos, corporis veniam impedit at maxime dignissimos officiis minus repellendus eaque libero, rem modi delectus deleniti.</p>
